--- a/styles.css
+++ b/styles.css
@@ -1,125 +1,144 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Poppins:wght@400;500;700&display=swap');
 
-*{                          /*coficugaçao do texto*/
+* {                          /*coficugaçao do texto*/
     font-family: 'Poppins', sans-serif;
     margin: 0; 
     padding: 0;
     box-sizing: border-box;
 }
 
-header {                   /*configuraçao do tamanho*/
-    margin-top: 47px;
-    margin-left: 42px;
+.button-Sing-Up {            /*configuraçao do botao*/
+    width: 124px;
+    height: 51px;
+    flex-shrink: 0;
+    border-radius: 6px;
+    border: 1px solid #4CB538;
+    background: #6FBF44;
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+ul {
+    align-items:center;
+    display: flex;
+    list-style: none;
+    gap: 32px;
+    color: #17233D;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 0.875px;
+    margin: 47px 0 0 42px;
+    cursor: pointer;
 }
 
-.link-header{              /*cofiguraçao do cabeçalho*/
-    font-size: 14px;
-    font-weight: 400px;
-    line-height: 21px;
-    text-align: center;
-    color:#17233d;
-    cursor:pointer;
-    letter-spacing: 0.875px;
-    margin-right: 32px; 
+.container-img {           /*cofiguraaço da imagem*/
+    margin:163px 0 0 121px;
+    display: inline-block;
 }
-.button-Sing-Up {            /*configuraçao do botao*/
-    background:#6fbf44 ;
-    border:1px solid #4cb538;
-    border-radius: 6px;
-    width: 124px;
-    height:51px;
-    cursor:pointer;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing:1px;
-    color:#ffffff;
-}
-.logo-image {                /*cofiguraaço da imagem*/
-   margin:163px 0 0 123px;
-   display: inline-block;
-}
-div{                    /*coloca modelo linhas e caixas*/
+.container-text {
     display: inline-block;
     margin-left: 85px;
-    width: 493px;
 }
-h1{                     /*configuraçao titulo*/
+
+h1 {
+    width: 582px;
+    margin: 0px 57px 47px 0;
     font-size: 62px;
     font-weight: 700;
     line-height: 82px;
-    letter-spacing: 0.596154px;
-    color: #161A49;
-
+    letter-spacing: 0.596px;
 }
-p{                  /*configuraçao do paragrafo*/
-    font-weight: 400;
+p {
+    width: 493px;
+    color: #4B505A;
     font-size: 18px;
+    font-weight: 400;
     line-height: 33px;
     letter-spacing: 0.5px;
-    color: #4B505A;
-    width: 493px;
-    margin-top: 47px;
-    margin-bottom: 55px;
-    
-}                 
-.button-main{
+    margin: 0 146px 55px 0;
+}
+
+.button-main {
+    width: 112px;
     color: #6FBF44;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 500;
-    line-height: 27px;
     letter-spacing: 1px;
-    cursor:pointer ;
-    background-color: transparent;
+    margin: 0 527px 0px 0;
+    cursor: pointer;
+    background: transparent;
     border: none;
-    margin-top: 55px;
 }
+@media screen and (max-width: 750px) {
 
-@media screen and ( max-width:900px){
-   
-    .link-header {
-       display: none;
+    section {
+        display: flex;
+        flex-direction: column-reverse;
     }
-    .button-Sing-Up {
-        margin: -30px 520px;
-        display: block;
+
+    li {
+        display: none;
     }
-    .div {
-        display: block;
-        margin-left: 278px;
-        width:100%;
-        height:50%;
-        padding: 0;
-        margin: 0;
+
+    ul {
+        justify-content: flex-end;
+        margin: 17px 15px 76px 0;
     }
+
+    .button-sign-up {
+        width: 91px;
+        height: 31px;
+        flex-shrink: 0;
+        border-radius: 6px;
+        border: 1px solid #4CB538;
+        background: #6FBF44;
+    }
+
     h1 {
-        font-size: 36px;
-        line-height: 52px;
-        width: auto;
-        margin: 58px 50px 0 50px;
-        text-align: center; 
-    }
-    p {
-        margin: 15px 40px;
-        width: auto;
+        width: 278px;
+        color: #161A49;
         text-align: center;
-        font-size: 14px;
-        line-height: 24px;
+        font-size: 30px;
+        font-weight: 700;
+        line-height: 30px;
+        letter-spacing: 0.596px;
+        margin: 0 55px 29px 57px;
     }
-    button-main {
-        display: block;
-        font-size: 25px;
-        font-weight: 900;
-        line-height: 0px;
+
+    p {
+        width: 304px;
+        color: #4B505A;
+        text-align: center;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 33px;
+        letter-spacing: 0.5px;
+        margin: 0 43px 26px 43px;
+    }
+
+    .button-main {
+        color: #6FBF44;
+        font-size: 17px;
+        font-weight: 500;
+        line-height: normal;
+        letter-spacing: 1px;
+        margin: 0 139px 59px 139px;
+
+    }
+
+    img {
+        width: 279.921px;
+        height: 268.932px;
+        flex-shrink: 0;
+
+    }
+
+    .container-img {
         margin-top: 0px;
-        width:auto;
-        
-    }
-    .logo-image {
-        margin: 290px 0px -770px 20px;
-        display: block;
-      
     }
 }
-
-
